crates/cash-parser/src/parser/tests/snapshots/cash_parser__parser__tests__and_or_lists__parse_simple_and.snap
---
source: cash-parser/src/parser/tests/and_or_lists.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "true && echo yes",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "true",
                  loc: "[location]",
                )),
              )),
            ],
          ),
          additional: [
            And(Pipeline(
              seq: [
                Simple(SimpleCommand(
                  word_or_name: Some(Word(
                    value: "echo",
                    loc: "[location]",
                  )),
                  suffix: Some(CommandSuffix([
                    Word(Word(
                      value: "yes",
                      loc: "[location]",
                    )),
                  ])),
                )),
              ],
            )),
          ],
        ), Sequence),
      ]),
    ],
  ),
)
